@@ -9,14 +9,20 @@ class ClickException(Exception):
     exit_code = 1
 
     def __init__(self, message):
-        if PY2:
-            if message is not None:
-                message = message.encode('utf-8')
         Exception.__init__(self, message)
         self.message = message
 
     def format_message(self):
         return self.message
+
+    def __str__(self):
+        return self.message
+
+    if PY2:
+        __unicode__ = __str__
+
+        def __str__(self):
+            return self.message.encode('utf-8')
 
     def show(self, file=None):
         if file is None:
